@@ -23,6 +23,9 @@ Version 1.4.22 - SVN
   - Added SMTP SASL PLAIN authentication option to configuration tool
     (core support for such is not new).
   - Gmail doens't support standard search commands; removed sort buttons.
+  - Forced addition of a file suffix to attachments that lack a filename
+    (helps forwarded messages avoid spam filters) (Thanks to Petr
+    Kletecka) (#3139004).
 
 Version 1.4.21 - 23 Jul 2010
 ----------------------------
